# RoboTraceOpt

./: .gitignore  LICENSE  README.md  pyproject.toml
diagnosis/: README.md  __init__.py  evaluation.py
diagnosis/adapters/: __init__.py  application_compute_delay_adapter.py  callback_dispatch_adapter.py  clock_calibration.py  dds_pressure_adapter.py  ebpf_adapter.py  errors.py  legacy_runtime_event_adapter.py  mock_ack_lifecycle_adapter.py  runtime_event_adapter.py  scheduling_pressure_adapter.py  service_blocking_delay_adapter.py  socketcan_ack_lifecycle_adapter.py  tracetools_adapter.py
diagnosis/evidence_graph/: __init__.py  association.py  association_report.py  builder.py  callback_identity.py  confidence.py  evaluation.py  inference.py  model.py  stage_window.py  topology_contract.py
diagnosis/reports/: __init__.py  diagnosis_report.py
diagnosis/rules/: __init__.py  root_cause_catalog.yaml
diagnosis/schema/: __init__.py  normalized_event.py
docs/fusion/: DIAGNOSIS_EVALUATION.md  DIAGNOSIS_INFERENCE.md  TRACE_STAGE_ASSOCIATION.md  TYPED_EVIDENCE_GRAPH.md
docs/hardware/: X5_RUNBOOK.md
docs/schema/: CLOCK_AND_PROCESS_MANIFEST.md  EBPF_RUNTIME_V1.md  NORMALIZED_EVENT.md  RUNTIME_EVENT_V2.md
docs/tracing/: EBPF_CAPTURE.md  ROS2_TRACING_SMOKE.md
experiments/: __init__.py
experiments/evidence_capture/: __init__.py  artifact_manifest.py  collector_lifecycle.py
experiments/fault_injection/: README.md  __init__.py  compare_f1_compute_delay.py  compare_f2_dispatch.py  compare_f3_pressure.py  compare_f4_blocking_delay.py  compare_f5_pressure.py  compare_f6_mock_ack.py  compare_f6_physical_ack.py  compare_f6_vcan_ack.py  fault_catalog.json  registry.py  runner.py  scheduling_pressure.py  socketcan_capture.py  socketcan_responder.py
experiments/physical_can/: __init__.py  interfaces.py
experiments/protocol/: __init__.py  formal_experiment_matrix.json  matrix.py  qualification.py  runner_registry.py  session_integrity.py  session_manifest.py
optimizer/: README.md  __init__.py
optimizer/action_registry/: __init__.py  actions.json  registry.py
optimizer/experiments/: __init__.py  campaign_schedule.py
optimizer/integration/: __init__.py  (+3 more)
reporting/: __init__.py  experiment_report.py
ros2_core/src/ai_robot_runtime_interfaces/: CMakeLists.txt  README.md  package.xml
ros2_core/src/ai_robot_runtime_interfaces/action/: RobotCommand.action
ros2_core/src/ai_robot_runtime_interfaces/include/ai_robot_runtime_interfaces/: runtime_event_identity.hpp
ros2_core/src/ai_robot_runtime_interfaces/msg/: CameraFrame.msg  PlannerCommand.msg  RuntimeEvent.msg  TraceHeader.msg
ros2_core/src/ai_robot_runtime_interfaces/srv/: RuntimeQuery.srv
ros2_core/src/camera_mock_pkg/: CMakeLists.txt  README.md  package.xml
ros2_core/src/camera_mock_pkg/config/: camera_mock.yaml
ros2_core/src/camera_mock_pkg/include/camera_mock_pkg/: camera_mock_node.hpp
ros2_core/src/camera_mock_pkg/launch/: camera_mock.launch.py
ros2_core/src/camera_mock_pkg/src/: camera_mock_node.cpp
ros2_core/src/can_bridge_pkg/: CMakeLists.txt  README.md  package.xml
ros2_core/src/can_bridge_pkg/config/: can_bridge.yaml
ros2_core/src/can_bridge_pkg/include/can_bridge_pkg/: can_bridge_node.hpp
ros2_core/src/can_bridge_pkg/launch/: can_bridge.launch.py
ros2_core/src/can_bridge_pkg/src/: can_bridge_node.cpp
ros2_core/src/minimal_runtime_demo/: CMakeLists.txt  README.md  package.xml
ros2_core/src/minimal_runtime_demo/config/: demo.yaml
ros2_core/src/minimal_runtime_demo/include/minimal_runtime_demo/: common.hpp
ros2_core/src/minimal_runtime_demo/launch/: minimal_demo.launch.py
ros2_core/src/minimal_runtime_demo/src/: action_node.cpp  control_node.cpp  input_node.cpp  planner_node.cpp
ros2_core/src/robot_action_pkg/: CMakeLists.txt  README.md  package.xml
ros2_core/src/robot_action_pkg/config/: robot_action.yaml
ros2_core/src/robot_action_pkg/include/robot_action_pkg/: action_manager_node.hpp  robot_action_node.hpp
ros2_core/src/robot_action_pkg/launch/: action_manager.launch.py  robot_action.launch.py
ros2_core/src/robot_action_pkg/src/: action_manager_node.cpp  robot_action_node.cpp
ros2_core/src/runtime_bringup/: CMakeLists.txt  README.md  package.xml
ros2_core/src/runtime_bringup/config/: runtime.yaml
ros2_core/src/runtime_bringup/launch/: ai_runtime.launch.py
ros2_core/src/runtime_logger_pkg/: CMakeLists.txt  README.md  package.xml
ros2_core/src/runtime_logger_pkg/config/: runtime_logger.yaml
ros2_core/src/runtime_logger_pkg/include/runtime_logger_pkg/: runtime_event_logger_node.hpp
ros2_core/src/runtime_logger_pkg/launch/: runtime_logger.launch.py
ros2_core/src/runtime_logger_pkg/src/: runtime_event_logger_node.cpp
ros2_core/src/service_runtime_demo/: CMakeLists.txt  README.md  package.xml
ros2_core/src/service_runtime_demo/include/service_runtime_demo/: context_contract.hpp
ros2_core/src/service_runtime_demo/launch/: service_runtime_demo.launch.py
ros2_core/src/service_runtime_demo/src/: service_client_node.cpp  service_server_node.cpp
ros2_core/src/service_runtime_demo/test/: test_context_contract.cpp
ros2_core/src/vlm_planner_pkg/: README.md  package.xml  setup.cfg  setup.py
ros2_core/src/vlm_planner_pkg/config/: planner.yaml
ros2_core/src/vlm_planner_pkg/launch/: vlm_planner.launch.py
ros2_core/src/vlm_planner_pkg/src/: vlm_planner_node.py
ros2_core/src/vlm_planner_pkg/src/planner_clients/: __init__.py  base_client.py  delay.py  llm_client.py  mock_client.py  schema.py
ros2_core/src/vlm_planner_pkg/test/: test_mock_planner.py
scripts/: bootstrap_x5.sh  build_core.sh  build_tracetools_overlay.sh  capture_ebpf_runtime.py  capture_process_manifest.py  check_platform_capabilities.py  check_smoke_outputs.py  export_ros2_trace.py  export_tracetools_fixture.py  generate_experiment_report.py  preflight_x5.py  run_closed_loop_optimization.py  run_fault_condition.py  run_formal_experiment_session.py  run_optimization_trial.py  run_repeated_optimization_campaign.py  run_ros2_tracing_smoke.sh  run_smoke_workload.sh  run_x5_demo.py
(+105 files in other folders)
