<?xml version="1.0"?>
<package format="3">
  <name>ai_robot_runtime_interfaces</name>
  <version>0.0.1</version>
  <description>Shared ROS2 messages and actions for AI Robotics Runtime.</description>
  <maintainer email="todo@example.com">todo</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
