<?xml version="1.0"?>
<package format="3">
  <name>robot_action_pkg</name>
  <version>0.0.1</version>
  <description>Mock robot action executor for planner commands.</description>
  <maintainer email="Quchaosheng@users.noreply.github.com">Quchaosheng</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>ai_robot_runtime_interfaces</depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
