<?xml version="1.0"?>
<package format="3">
  <name>service_runtime_demo</name>
  <version>0.1.0</version>
  <description>Request-response runtime evidence experiment for ROS 2.</description>
  <maintainer email="Quchaosheng@users.noreply.github.com">Quchaosheng</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>ai_robot_runtime_interfaces</depend>
  <depend>rclcpp</depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
