<?xml version="1.0"?>
<package format="3">
  <name>vlm_planner_pkg</name>
  <version>0.0.1</version>
  <description>Multi-backend VLM planner node for the AI Robotics Runtime.</description>
  <maintainer email="Quchaosheng@users.noreply.github.com">Quchaosheng</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>ai_robot_runtime_interfaces</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
